src/styles/projects.css
body {
    font-family: 'Plus Jakarta Sans', sans-serif;
    padding-top: 50px; /* Adjust as needed */
    padding-bottom: 50px; /* Add padding to the bottom */
    margin-left: 15%;
    margin-right: 15%;
    opacity: 0;
    transition: opacity 1s ease-in-out;
}

body.loaded {
    opacity: 1;
}

.container {
    padding: 20px; /* Adjust as needed */
    margin-left: auto;
    margin-right: auto;
    max-width: 960px; /* Set a maximum width for the container */
}

@media (max-width: 767px) {
    /* Mobile styles */
    body {
        margin-left: 10%;
        margin-right: 10%;
    }
}

ul {
    list-style: none;
    padding: 0;
}

p {
    text-align: justify;
    text-justify: justify;
}

.img-fluid {
    max-width: 100%; /* Ensure the image doesn't exceed its container's width */
    height: auto; /* Maintain aspect ratio */
    display: block; /* Ensure proper layout */
    margin-left: auto; /* Center the image horizontally */
    margin-right: auto; /* Center the image horizontally */
    max-height: 80vh; /* Limit the maximum height to 80% of the viewport height */
}

